# euro-temperat-trend-stats

./: .gitignore  404.html  POETRY.md  README.md  index.html  mkdocs.yml  project_report  project_report.md  pyproject.toml  visualization_plan.md  yearly_data.md
.github/workflows/: deploy.yml
POETRY/: index.html
docs/: index.md  project_report.md  wymagania_projektowe.md  yearly_data.md
project_report/: index.html
src/: clean.py  data_viz.py  detect_top5_temperature_changes.py  download.py  pyspark_queries.py  yearly_query.py
wymagania_projektowe/: index.html
