[tool.poetry]
name = "euro-temperature-trend-stats"
version = "0.1.0"
description = ""
authors = ["Dawid Mielewczyk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
requests = "^2.32.3"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
